force-app/main/default/objects/amazonconnect__AC_CtiAdapter__c/fields/amazonconnect__BottomPanel__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__BottomPanel__c</fullName>
    <label>Bottom Panel</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>