force-app/main/default/objects/amazonconnect__AC_CtiAdapter__c/fields/amazonconnect__CustomChatRingtone__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CustomChatRingtone__c</fullName>
    <label>Custom Chat Ringtone</label>
    <type>Url</type>
</CustomField>