force-app/main/default/objects/amazonconnect__AC_CtiAdapter__c/fields/amazonconnect__DebugLevel__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__DebugLevel__c</fullName>
    <label>Debug Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__ACDebugLevel</valueSetName>
    </valueSet>
</CustomField>