force-app/main/default/objects/amazonconnect__AC_CtiAdapter__c/fields/amazonconnect__PhoneTypeSettings__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__PhoneTypeSettings__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Phone Type Settings</label>
    <type>Checkbox</type>
</CustomField>