force-app/main/default/objects/amazonconnect__AC_CtiAdapter__c/fields/amazonconnect__SoftphonePopoutEnabled__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__SoftphonePopoutEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Softphone Popout Enabled</label>
    <type>Checkbox</type>
</CustomField>