force-app/main/default/objects/amazonconnect__AC_CtiAdapter__c/fields/amazonconnect__SsoRelayState__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__SsoRelayState__c</fullName>
    <label>SSO Relay State</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>