force-app/main/default/objects/amazonconnect__AC_CtiAdapter__c/fields/amazonconnect__UserDefined__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__UserDefined__c</fullName>
    <description>User defined configuration</description>
    <label>User Defined</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>